2.2.2-pre2

Mon Apr 14 12:21:21 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: change version to 2.2.2-pre2.

Mon Apr 14 09:48:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: add internal fault as separate alarm status,
   removed unused status and alarm bits

Mon Apr 14 09:21:34 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/main-hal.c: fix a bitwising error on setup_signals.

Mon Apr 14 06:47:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: don't spam the syslog if we can't connect to
   the UPS

Sat Apr 12 20:17:04 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upssched.c: fix typo (clears wrong variable)

Sat Apr 12 07:08:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: backported from the trunk r1437 (re)connect timeout
   (add requirement for build neon >= 0.25.0)

Sat Apr  5 14:30:00 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - added several devices supported by megatec_usb to the compatibility
   list and udev script.

Sat Apr  5 14:13:30 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: changed the default subdriver from agiler
   to agiler-old for several devices known for incompatibility with
   agiler subdriver.

Sat Apr  5 14:05:39 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: (backported from trunk r1423)
   resurrected an old stable version of agiler subdriver.

Sat Apr  5 14:54:38 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/drivers.list: added models supported by megatec and megatec_usb
 - drivers/megatec.c: backport from the trunk (better at handling bad data)

Sat Apr  5 13:49:46 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: (backported from trunk r1168, r1211)
   added reconnect support.

Sat Apr  5 13:41:43 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
